[Issue #437] Dropdown timelines in action bar are misaligned

--- a/src/component/plasmic/shared/PlasmicActionBar.module.css
+++ b/src/component/plasmic/shared/PlasmicActionBar.module.css
@@ -757,7 +757,7 @@
   flex-wrap: wrap;
   margin-left: calc(0px - 10px);
   width: calc(100% + 10px);
-  margin-top: calc(0px - 10px);
+  margin-top: calc(0px - 10px - 1em);
   height: calc(100% + 10px);
 }
 .container__timelineSelected > :global(.__wab_flex-container) > *,
